--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "filament/filament": "^3.0-stable",
         "filament/spatie-laravel-tags-plugin": "^3.2",
         "guzzlehttp/guzzle": "^7.2",
+        "itsgoingd/clockwork": "^5.2",
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.3",
         "laravel/socialite": "^5.12",
@@ -19,7 +20,6 @@
         "rap2hpoutre/laravel-log-viewer": "^2.3"
     },
     "require-dev": {
-        "barryvdh/laravel-debugbar": "^3.9",
         "fakerphp/faker": "^1.9.1",
         "larastan/larastan": "^2.0",
         "laravel/envoy": "^2.9",
